3/29/2023: Karl 
- Ban pipeline finished
- Domain banning and global banning 
- Making profileUpdateResponse a polymorphic method of controllers


3/24/2023: Karl 
- ViewModRecords pipeline
- Made some schema changes, re-migrate required 

3/22/2023: Karl
- Moderate pipeline "/moderate"
- comment reports and votes won't work for removed comments
- removed comments return "~removed~" and empty string username to requesting users. This is only in the page cache, not what is stored in the database. 
- removed comments update in the page cache in real time to "remove" so we don't have to restart server to see removed comments
- viewing comment reports only shows reports that have had no action taken on them 
- Queries.GetCurrentDomain(commentID) to quickly get a comment's domain 
- 

3/21/2023: Karl
- adding logs to the database for every request. Uses a context associated with the request to update the userID in case that request results in a log-in.
- /viewLogs pipeline. Used a decently long function in package database for all the filtering. (store.GetLogs)

3/19/2023: Karl
- Update communication.CommentReport to match design document field names


3/18/2023 : Karl
- Finished back-end portion of pipeline for sending CommentReports. Wrote SQL query. Validates if domain is one moderated for domain moderator or global moderator. Will send all commentReports to Global and Admins if the domain requested is 'all', otherwise will provide just for a specific domain. 

3/17/2023 : Karl 
- PostCommentReport, needed queries and routes, also added 2 default reports to the 2nd migration

3/12/2023: Luke & Karl
- Started pipeline for sending CommentReports

3/12/2023: Karl
- AssignGlobalModerator, AssignAdmin structs and pipeline 
- Changing a logged-in user's controller will swap it at runtime and push a login response to the user's nextmessages so their front end can quickly realize the changes. 