@@ -1,6 +1,0 @@
-make dependencies
-make build_postgres
-make create_db
-make migrate_up
-go install .
-ca-back-end
