@@ -1,8 +1,0 @@
-DELETE FROM "CommentReports";
-DELETE FROM "VoteRecords";
-DELETE FROM "Comments";
-DELETE FROM "Paths";
-DELETE FROM "Domains";
-DELETE FROM "AdminAssignments";
-DELETE FROM "GlobalModeratorAssignments";
-DELETE FROM "Users";
